runs/runs/github.com/Ipython/ipython-in-depth/logs/test-notebook-exercises-Parallel Computing-Parallel face detection.ipynb-2020-07-06T07.02.txt
[I 200706 07:16:29 inrepo:35] Testing notebook exercises/Parallel Computing/Parallel face detection.ipynb
[I 200706 07:16:31 execute:404] Executing notebook with kernel: python
Traceback (most recent call last):
  File "/src/inrepo.py", line 76, in <module>
    main()
  File "/src/inrepo.py", line 72, in main
    test_f(opts.test, opts.output_dir)
  File "/src/inrepo.py", line 38, in run_notebook
    exported = executenb(nb, cwd=os.path.dirname(nb_path))
  File "/srv/conda/envs/notebook/lib/python3.6/site-packages/nbconvert/preprocessors/execute.py", line 737, in executenb
    return ep.preprocess(nb, resources, km=km)[0]
  File "/srv/conda/envs/notebook/lib/python3.6/site-packages/nbconvert/preprocessors/execute.py", line 405, in preprocess
    nb, resources = super(ExecutePreprocessor, self).preprocess(nb, resources)
  File "/srv/conda/envs/notebook/lib/python3.6/site-packages/nbconvert/preprocessors/base.py", line 69, in preprocess
    nb.cells[index], resources = self.preprocess_cell(cell, resources, index)
  File "/srv/conda/envs/notebook/lib/python3.6/site-packages/nbconvert/preprocessors/execute.py", line 448, in preprocess_cell
    raise CellExecutionError.from_cell_and_msg(cell, out)
nbconvert.preprocessors.execute.CellExecutionError: An error occurred while executing the following cell:
------------------
def urls_for_tag(tag='face', min_images=100, max_pages=20):
    """get urls to flickr images with given tag(s)

    scrapes flickr search page
    """
    urls = []
    page = 1
    while len(urls) < min_images and page <= max_pages:
        url = 'http://www.flickr.com/search/?q=%s&l=cc&ss=0&ct=0&mt=photos&w=all&adv=1&m=tags&page=%i' % (tag, page)
        print "fetching %s" % url
        urlfile = urllib.urlopen(url)
        # global html
        html= urlfile.read()
        # print html
        urlfile.close()
        page_urls = extract_urls(html)
        urls.extend(page_urls)
        print "found %i images" % len(urls)
        if not len(page_urls):
            print "no new images"
            break
        page += 1
        
    return urls
------------------

[0;36m  File [0;32m"<ipython-input-4-2f731e684979>"[0;36m, line [0;32m10[0m
[0;31m    print "fetching %s" % url[0m
[0m                      ^[0m
[0;31mSyntaxError[0m[0;31m:[0m Missing parentheses in call to 'print'. Did you mean print("fetching %s" % url)?

SyntaxError: Missing parentheses in call to 'print'. Did you mean print("fetching %s" % url)? (<ipython-input-4-2f731e684979>, line 10)


Container exited with status: {'Error': None, 'StatusCode': 1}
